--- a/todo-app/frontend/package.json
+++ b/todo-app/frontend/package.json
@@ -10,8 +10,8 @@
   },
   "dependencies": {
     "next": "15.0.1",
-    "react": "19.0.0-rc-69d4b800-20241021",
-    "react-dom": "19.0.0-rc-69d4b800-20241021",
+    "react": "^19.0.0-rc-69d4b800-20241021",
+    "react-dom": "^19.0.0-rc-69d4b800-20241021",
     "react-redux": "^9.1.2",
     "redux": "^5.0.1",
     "redux-saga": "^1.3.0"
